--- a/TS.Brokers.Web/Pages/Stock.razor
+++ b/TS.Brokers.Web/Pages/Stock.razor
@@ -1,9 +1,7 @@
 ﻿@page "/stock"
-@using TS.Brokers.Web.Models
+@using TS.Brokers.Web.Data
 
 <PageTitle>Ações</PageTitle>
-
-<h1>Ações</h1>
 
 <table class="table">
     <thead>
@@ -14,7 +12,7 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (var stock in Stocks.Values)
+        @foreach (var stock in Stocks.Values.OrderBy(x => x.Price))
         {
             <tr>
                 <td>@stock.Symbol</td>
