--- a/TS.Brokers.Web/Shared/NavMenu.razor
+++ b/TS.Brokers.Web/Shared/NavMenu.razor
@@ -20,8 +20,13 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            <NavLink class="nav-link" href="customer">
+                <span class="oi oi-plus" aria-hidden="true"></span> Customer
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="order">
+                <span class="oi oi-plus" aria-hidden="true"></span> Orders
             </NavLink>
         </div>
     </nav>
