--- a/TS.Brokers.Web/Shared/SurveyPrompt.razor
+++ b/TS.Brokers.Web/Shared/SurveyPrompt.razor
@@ -3,14 +3,11 @@
     <strong>@Title</strong>
 
     <span class="text-nowrap">
-        Please take our
-        <a target="_blank" class="font-weight-bold link-dark" href="https://go.microsoft.com/fwlink/?linkid=2149017">brief survey</a>
+        - Simulador de Operações de Compra e Venda de Ativos.
     </span>
-    and tell us what you think.
 </div>
 
 @code {
-    // Demonstrates how a parent component can supply parameters
     [Parameter]
     public string? Title { get; set; }
 }
